Need to get the default font size and use that depending on Quirks or Strict Bug 78526 r=kmcclusk sr=attinasi a=dbaron